- remove 32 bit targets
Former-commit-id: 77df223b2492556731d9b84d8f2b13b65c7a101e